# fineract-ai-reports

./: .env  .env.example  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs  repository.rs  service.rs
crates/chat/src/api/: auth.rs  dto.rs  handlers.rs  mod.rs  routes.rs
crates/chat/src/api/dto/: catalog.rs  job.rs  session.rs
crates/chat/src/api/handlers/: catalog.rs  chat.rs  job.rs  session.rs
crates/chat/src/api/routes/: catalog.rs  chat.rs  job.rs  mod.rs  session.rs
crates/chat/src/chat/: classifier.rs  executor.rs  formatter.rs  mod.rs  model.rs  planner.rs  repository.rs  service.rs
crates/chat/src/chat/model/: job.rs  message.rs  mod.rs  session.rs
crates/chat/src/chat/repository/: job.rs  message.rs  mod.rs  session.rs
crates/chat/src/chat/service/: job.rs  message.rs  mod.rs  session.rs
crates/chat/src/knowladge/: loader.rs  mod.rs  model.rs  validator.rs
crates/chat/src/knowledge/: embedding.rs  mod.rs  model.rs  retrieval.rs
crates/chat/src/knowledge/catalog/: loader.rs  validator.rs
crates/chat/src/knowledge/index/: mod.rs  repository.rs  sync.rs
crates/chat/src/policy/: authorization.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  lib.rs  telemetry.rs
crates/core/src/api/: error.rs  mod.rs  response.rs
crates/core/src/api/dto/: auth.rs  health.rs
crates/core/src/api/extractors/: authenticated_client.rs  mod.rs  validated_json.rs
crates/core/src/api/handlers/: auth.rs  health.rs
crates/core/src/api/routes/: auth.rs  health.rs
crates/core/src/auth/: api_key.rs  authorization.rs  mod.rs  model.rs  repository.rs  service.rs
docs/: ai-reporting-design.md  chat-data-model.md  implementation-steps.md  knowledge-catalog.md  project-setup.md  rag-architecture.md  reporting-capabilities.md  reporting-data-scope.md  reporting-pii-policy.md
docs/reporting-data/: accounting-gl.md  audit-users-operations.md  client-foundation.md  custom-datatables.md  group-center-foundation.md  loans.md  organization-foundation.md  savings-charges-fees.md  savings-core.md  savings-transactions.md  tax.md
knowledge/data-scope/: reporting-scope.yaml
knowledge/domains/: client.yaml  organization.yaml  savings.yaml
knowledge/policies/: execution_limits.yaml  office_scope.yaml  pii.yaml  query_safety.yaml  unsupported_requests.yaml
knowledge/responses/: clarification.yaml  reporting.yaml  unsupported.yaml
migrations/: 20260614121500_create_api_keys.sql  20260617130000_create_chat_tables.sql  20260621120000_create_knowledge_index.sql
queries/savings/: deposit_top_n.sql  deposit_total.sql
(+28 files in other folders)
